--- a/test2/index.html
+++ b/test2/index.html
@@ -1,4 +1,4 @@
 <link rel="stylesheet" type="text/css" href="style.css">
-<h1>Happy Birthday</h1>
-<canvas id="С 8 марта! Чтобы получить подарки позвоните 89638844172"></canvas>
+<h1>С 8 марта! Чтобы получить подарок, позвоните 89638844172</h1>
+<canvas id="birthday"></canvas>
 <script src="script.js"></script>
