add a random image

--- a/test/index.html
+++ b/test/index.html
@@ -1,2 +1,3 @@
 <img src="https://www.meme-arsenal.com/memes/118e860b8d8dd8ea5ca5a9c704988a19.jpg">
 <h1>Димооооон<h1>
+<img src="https://loremflickr.com/320/240"/>
