--- a/test2/index.html
+++ b/test2/index.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <h1><blockquote></blockquote>
   <blockquote></blockquote>
-  Поздравляем вас, вы большие молодцы!Вы справились и заслуживаете награду! Чтобы получить подарок, позвоните 89638844172</h1>
+  Поздравляем вас, вы большие молодцы!Вы справились и заслуживаете награду! Подарки ожидают вас в кабинете №304)</h1>
 <canvas id="birthday"></canvas>
 <script src="script.js"></script>
